Add flex mixin scss

--- a/src/styles/panel.module.scss
+++ b/src/styles/panel.module.scss
@@ -79,7 +79,9 @@
         .logo__sizes {
             display: flex;
             align-items: center;
+            flex-direction: column;
             justify-content: space-between;
+            @include flex(row, space-between, center);
         }
     }
 
