--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -21,17 +21,12 @@ $fontSizeXLarge: 1.5rem;
 $fontSizeXXLarge: 2rem;
 
 /* Mixins */
-@mixin gridCenter {
-    display: grid;
-    place-items: center;
-}
-
-@mixin flexBetween {
+@mixin flex($direction, $justify, $align) {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: $direction;
+    justify-content: $justify;
+    align-items: $align;
 }
-
 
 /* Global Styles */
 * {
