--- a/src/styles/appHeader.module.scss
+++ b/src/styles/appHeader.module.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    @include flexBetween;
+    @include flex(row, space-between, center);
     padding: 0.5rem;
     z-index: 1000;
 }
