--- a/src/styles/panel.module.scss
+++ b/src/styles/panel.module.scss
@@ -6,6 +6,9 @@
     transition: right 0.5s ease-in-out;
     z-index: 500;
     backdrop-filter: blur(100px);
+    -webkit-backdrop-filter: blur(100px);
+    -moz-backdrop-filter: blur(100px);
+
 
     .settingsPanel__header {
         padding: calc(2rem + 10px) .5rem 0;
